--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,114 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <header class="main-header">
+      <nav class="site-nav">
+        <a href="./index.html" class="logo"
+          ><span class="logo blue">Web</span><span class="logo black">Studio</span></a
+        >
+        <ul class="site-nav list">
+          <li class="list"><a href="./index.html" class="link">Студія</a></li>
+          <li class="list"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+          <li class="list"><a href="" class="link">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul class="contacts-nav list">
+        <li class="mail list">
+          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="tel list"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+    <main>
+      <section class="main-section">
+        <h1 class="visually-hidden">Наше портфоліо</h1>
+        <ul>
+          <li><button type="button">Усі</button></li>
+          <li><button type="button">Веб-сайти</button></li>
+          <li><button type="button">Додатки</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./images/p1.jpg" alt="ноутбук" width="370" height="294" />
+            <h2 class="title">Технокряк</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/p2.jpg" alt="два баскетболісти з мячем" width="370" height="294" />
+            <h2 class="title">Постер New Orlean vs Golden Star</h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/p3.jpg" alt="лого ресторану" width="370" height="294" />
+            <h2 class="title">Ресторан Seafood</h2>
+            <p>Додаток</p>
+          </li>
+          <li>
+            <img src="./images/p4.jpg" alt="навушники" width="370" height="294" />
+            <h2 class="title">Проєкт Prime</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/p5.jpg" alt="дві коробки" width="370" height="294" />
+            <h2 class="title">Проєкт Boxes</h2>
+            <p>Додаток</p>
+          </li>
+          <li>
+            <img src="./images/p6.jpg" alt="компютер єпл" width="370" height="294" />
+            <h2 class="title">Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/p7.jpg" alt="розгонута книга" width="370" height="294" />
+            <h2 class="title">Видання Limited Edition</h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/p8.jpg" alt="бірка з лейблом" width="370" height="294" />
+            <h2 class="title">Проєкт LAB</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/p9.jpg" alt="ноутбук на якому печатають" width="370" height="294" />
+            <h2 class="title">Growing Business</h2>
+            <p>Додаток</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="footer-section">
+      <a href="./index.html" class="logo">
+        <span class="logo blue">Web</span><span class="logo white">Studio</span></a
+      >
+      <address class="adress-nav">
+        <ul class="adress-nav-list">
+          <li class="adress list">
+            <a class="adress link"
+              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li class="mail list">
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="tel list">
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
