--- a/index.html
+++ b/index.html
@@ -1,121 +1,129 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
-            </ul>
-        </nav>
-        <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li></li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <header class="main-header">
+      <nav class="site-nav">
+        <a href="./index.html" class="logo"
+          ><span class="logo blue">Web</span><span class="logo black">Studio</span></a
+        >
+        <ul class="site-nav list">
+          <li class="list"><a href="./index.html" class="link current">Студія</a></li>
+          <li class="list"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li class="list"><a href="" class="link">Контакти</a></li>
         </ul>
+      </nav>
+      <ul class="contacts-nav list">
+        <li class="mail list">
+          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="tel list"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
-<main>
-<section>
-    <h1>Ефективні рішення для <br /> вашого бізнесу</h1>
-    <button type="button">Замовити послугу</button>
-</section>
-<section>
-    <h2>Наші переваги</h2>
-    <ul>
-        <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-        </li>
-        <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-        </li>
-        <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-        </li>
-        <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-        </li>
-    </ul>
-</section>
-<section>
-    <h2>Чим ми займаємося</h2>
-    <ul>
-        <li>
-            <img src="./images/box1.jpg" alt="верстка скелету сайту" width="370">
-            
-        </li>
-        <li>
-            <img src="./images/box2.jpg" alt="дизайн застосунків на телефони" width="370">
+    <main>
+      <section class="hero">
+        <h1 class="hero-title">
+          Ефективні рішення для <br />
+          вашого бізнесу
+        </h1>
+        <button class="model-open-btn" type="button">Замовити послугу</button>
+      </section>
+      <section>
+        <h2 class="visually-hidden">Наші переваги</h2>
+        <ul class="features list">
+          <li class="features-item">
+            <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="features-item text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="features-item text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title">ПЛАНУВАННЯ</h3>
+            <p class="features-item text">Так само консультація з широким активом значною мірою зумовлює.</p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="features-item text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          </li>
+        </ul>
+      </section>
+      <section class="working-section">
+        <h2 class="working-title">Чим ми займаємося</h2>
+        <ul class="working list">
+          <li class="working-item list">
+            <img src="./images/box1.jpg" alt="верстка скелету сайту" width="370" />
+          </li>
+          <li class="working-item list">
+            <img src="./images/box2.jpg" alt="дизайн застосунків на телефони" width="370" />
+          </li>
+          <li class="working-item list">
+            <img src="./images/box3.jpg" alt="підбір кольорової гами" width="370" />
+          </li>
+        </ul>
+      </section>
 
-        </li>
-        <li>
-            <img src="./images/box3.jpg" alt="підбір кольорової гами" width="370">
+      <section class="team-section">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team list">
+          <li class="team-item list">
+            <img src="./images/img1.jpg" alt="Ігор Дем'яненко фото" width="270" height="260" />
+            <h3 class="team-item title">Ігор Дем'яненко</h3>
+            <p class="tema-item-text">Product Designer</p>
+          </li>
+          <li class="team-item list">
+            <img src="./images/img2.jpg" alt="Ольга Рєпіна фото" width="270" height="260" />
+            <h3 class="team-item title">Ольга Рєпіна</h3>
+            <p class="tema-item-text">Frontend Developer</p>
+          </li>
+          <li class="team-item list">
+            <img src="./images/img3.jpg" alt="Микола Тарасов фото" width="270" height="260" />
+            <h3 class="team-item title">Микола Тарасов</h3>
+            <p class="tema-item-text">Marketing</p>
+          </li>
+          <li class="team-item list">
+            <img src="./images/img4.jpg" alt="Михайло Єрмаков фото" width="270" height="260" />
+            <h3 class="team-item title">Михайло Єрмаков</h3>
+            <p class="tema-item-text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
 
-        </li>
-    </ul>
-</section>
-
-<section>
-    <h2>Наша команда</h2>
-    <ul>
-        <li>
-            <img src="./images/img1.jpg" alt="Ігор Дем'яненко фото"
-             width="270"
-             height="260">
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
-        </li>
-        <li>
-            <img src="./images/img2.jpg" alt="Ольга Рєпіна фото" 
-            width="270"
-            height="260">
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
-        </li>
-        <li>
-            <img src="./images/img3.jpg" alt="Микола Тарасов фото" 
-            width="270"
-            height="260">
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
-        </li>
-        <li>
-            <img src="./images/img4.jpg" alt="Михайло Єрмаков фото" 
-            width="270"
-            height="260">
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
-        </li>
-    </ul>
-</section>
-</main>
-
-<footer>
-<a href="./index.html">WebStudio</a>
-<address>
-    <ul>
-        <li>
-            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" 
-            target="_blank" 
-            rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
-        </li>
-        <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-    </ul>
-</address>
-</footer>
-</body>
+    <footer class="footer-section">
+      <a href="./index.html" class="logo">
+        <span class="logo blue">Web</span><span class="logo white">Studio</span></a
+      >
+      <address class="adress-nav">
+        <ul class="adress-nav-list">
+          <li class="adress list">
+            <a class="adress link"
+              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li class="mail list">
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="tel list">
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
