--- a/index.html
+++ b/index.html
@@ -81,22 +81,22 @@
           <li class="team-item list">
             <img src="./images/img1.jpg" alt="Ігор Дем'яненко фото" width="270" height="260" />
             <h3 class="team-item title">Ігор Дем'яненко</h3>
-            <p class="tema-item-text">Product Designer</p>
+            <p class="team-item-text" lang="en">Product Designer</p>
           </li>
           <li class="team-item list">
             <img src="./images/img2.jpg" alt="Ольга Рєпіна фото" width="270" height="260" />
             <h3 class="team-item title">Ольга Рєпіна</h3>
-            <p class="tema-item-text">Frontend Developer</p>
+            <p class="team-item-text" lang="en">Frontend Developer</p>
           </li>
           <li class="team-item list">
             <img src="./images/img3.jpg" alt="Микола Тарасов фото" width="270" height="260" />
             <h3 class="team-item title">Микола Тарасов</h3>
-            <p class="tema-item-text">Marketing</p>
+            <p class="team-item-text" lang="en">Marketing</p>
           </li>
           <li class="team-item list">
             <img src="./images/img4.jpg" alt="Михайло Єрмаков фото" width="270" height="260" />
             <h3 class="team-item title">Михайло Єрмаков</h3>
-            <p class="tema-item-text">UI Designer</p>
+            <p class="team-item-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
