--- a/portfolio.html
+++ b/portfolio.html
@@ -35,58 +35,58 @@
     <main>
       <section class="main-section">
         <h1 class="visually-hidden">Наше портфоліо</h1>
-        <ul>
-          <li><button type="button">Усі</button></li>
-          <li><button type="button">Веб-сайти</button></li>
-          <li><button type="button">Додатки</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="works-menu">
+          <li class="menu-item"><button class="menu-btn" type="button">Усі</button></li>
+          <li class="menu-item"><button class="menu-btn" type="button">Веб-сайти</button></li>
+          <li class="menu-item"><button class="menu-btn" type="button">Додатки</button></li>
+          <li class="menu-item"><button class="menu-btn" type="button">Дизайн</button></li>
+          <li class="menu-item"><button class="menu-btn" type="button">Маркетинг</button></li>
         </ul>
-        <ul>
-          <li>
+        <ul class="works-content">
+          <li class="work-content-item">
             <img src="./images/p1.jpg" alt="ноутбук" width="370" height="294" />
             <h2 class="title">Технокряк</h2>
-            <p>Веб-сайт</p>
+            <p class="text">Веб-сайт</p>
           </li>
-          <li>
+          <li class="work-content-item">
             <img src="./images/p2.jpg" alt="два баскетболісти з мячем" width="370" height="294" />
-            <h2 class="title">Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <h2 class="title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
+            <p class="text">Дизайн</p>
           </li>
-          <li>
+          <li class="work-content-item">
             <img src="./images/p3.jpg" alt="лого ресторану" width="370" height="294" />
-            <h2 class="title">Ресторан Seafood</h2>
-            <p>Додаток</p>
+            <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+            <p class="text">Додаток</p>
           </li>
-          <li>
+          <li class="work-content-item">
             <img src="./images/p4.jpg" alt="навушники" width="370" height="294" />
-            <h2 class="title">Проєкт Prime</h2>
-            <p>Маркетинг</p>
+            <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
+            <p class="text">Маркетинг</p>
           </li>
-          <li>
+          <li class="work-content-item">
             <img src="./images/p5.jpg" alt="дві коробки" width="370" height="294" />
-            <h2 class="title">Проєкт Boxes</h2>
-            <p>Додаток</p>
+            <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
+            <p class="text">Додаток</p>
           </li>
-          <li>
+          <li class="work-content-item">
             <img src="./images/p6.jpg" alt="компютер єпл" width="370" height="294" />
-            <h2 class="title">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="title" lang="en">Inspiration has no Borders</h2>
+            <p class="text">Веб-сайт</p>
           </li>
-          <li>
+          <li class="work-content-item">
             <img src="./images/p7.jpg" alt="розгонута книга" width="370" height="294" />
-            <h2 class="title">Видання Limited Edition</h2>
-            <p>Дизайн</p>
+            <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
+            <p class="text">Дизайн</p>
           </li>
-          <li>
+          <li class="work-content-item">
             <img src="./images/p8.jpg" alt="бірка з лейблом" width="370" height="294" />
-            <h2 class="title">Проєкт LAB</h2>
-            <p>Маркетинг</p>
+            <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
+            <p class="text">Маркетинг</p>
           </li>
-          <li>
+          <li class="work-content-item">
             <img src="./images/p9.jpg" alt="ноутбук на якому печатають" width="370" height="294" />
-            <h2 class="title">Growing Business</h2>
-            <p>Додаток</p>
+            <h2 class="title" lang="en">Growing Business</h2>
+            <p class="text">Додаток</p>
           </li>
         </ul>
       </section>
@@ -98,7 +98,8 @@
       <address class="adress-nav">
         <ul class="adress-nav-list">
           <li class="adress list">
-            <a class="adress link"
+            <a
+              class="adress link"
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
               rel="noopener noreferrer nofollow"
